samples/_failures_safe/1761267127_ad705e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35d5b4c1.c: In function ‘main’:
./samples/SAFE/__tmp_35d5b4c1.c:169:9: error: expected expression at end of input
  169 |         input[len -
      |         ^~~~~
./samples/SAFE/__tmp_35d5b4c1.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35d5b4c1.c:169:9: error: expected declaration or statement at end of input
